# contextiq

./: .gitignore  LICENSE  PUBLISHING.md  README.md  demo.ps1  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: roadmap.md
src/contextiq/: __init__.py  chunking.py  cli.py  discovery.py  exporters.py  loaders.py  models.py  pipeline.py  utils.py
tests/: test_chunking.py  test_pipeline.py
