[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextiq"
version = "0.1.0"
description = "Turn messy files into agent-ready context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "ContextIQ Contributors" }
]
keywords = ["rag", "agents", "llm", "ingestion", "chunking", "search", "context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
docs = ["python-docx>=1.1.0", "pypdf>=5.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
contextiq = "contextiq.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=./build/.pytest-tmp"
cache_dir = "build/.pytest-cache"
